--- a/index.html
+++ b/index.html
@@ -65,29 +65,29 @@
                 <li title="Take a look at messenger">Messenger</li>
                 <li title="facebook Lite for Android">Facebook Lite</li>
                 <li title="Browse our watch video">Watch</li>
-                <li title="">Places</li>
-                <li title="">Games</li>
-                <li title="">Marketplace</li>
-                <li title="">Facebook Pay</li>
-                <li title="">Jobs</li>
-                <li title="">Oculus</li>
-                <li title="">Portal</li>
-                <li title="">Instagram</li>
-                <li title="">Local</li>
-                <li title="">Fundraisers</li>
-                <li title="">Services</li>
-                <li title="">Voting Information Center</li>
-                <li title="">Business</li>
-                <li title="">About</li>
-                <li title="">Create ad</li>
-                <li title="">Create Page</li>
-                <li title="">Developers</li>
-                <li title="">Careers</li>
-                <li title="">Privacy</li>
-                <li title="">Cookies</li>
-                <li title="">AdChoice</li>
-                <li title="">Terms</li>
-                <li title="">Help</li>
+                <li title="Take a look at Popular Places on facebook">Places</li>
+                <li title="Checkout facebook games">Games</li>
+                <li title="Buy and Sell on facebook Marketplace">Marketplace</li>
+                <li title="Learn More about facebook pay">Facebook Pay</li>
+                <li title="Apply for job and hire on facebook">Jobs</li>
+                <li title="Learn moe about Oculus">Oculus</li>
+                <li title="Learn  more about portal form facebook">Portal</li>
+                <li title="Take a look at Instagram">Instagram</li>
+                <li title="Browser out Local list Directory">Local</li>
+                <li title="Donate to worthy cause">Fundraisers</li>
+                <li title="Browse our facebook Service Directory">Services</li>
+                <li title="See the Voting Information Center">Voting Information Center</li>
+                <li title="Check out top local business on facebook">Business</li>
+                <li title="Read our blog and discover the resource center and find job oportunities">About</li>
+                <li title="Advertise on Facebook">Create ad</li>
+                <li title="Create a Page">Create Page</li>
+                <li title="Develope on out platform">Developers</li>
+                <li title="Make your next carrer move to our briliant company">Careers</li>
+                <li title="Learn about your privacy and Facebook">Privacy</li>
+                <li title="Learn about cookies and Facebook">Cookies</li>
+                <li title="Learn abour AdChoice">AdChoice</li>
+                <li title="Review our Term and Policies">Terms</li>
+                <li title="Visit our Help Center">Help</li>
             </ul>
         </div>
         <!-- Footer List Section Ends here -->
